@@ -56,15 +56,21 @@ void create_rooms(){
 	 placement_successful = 0;
        }
 
-       //Checks if two rooms are touching
-       else if (dungeon[y-1][x] != 0 || dungeon[y][x-1] != 0 ||
-		dungeon[y-1][x+x_dim] != 0 || dungeon[y][(x+x_dim)+1] != 0 ||
-		dungeon[y+y_dim+1][x] != 0 ||dungeon[y+y_dim][x-1] != 0 ||
-		dungeon[y+y_dim+1][x+x_dim] != 0 ||dungeon[y+y_dim][(x+x_dim)+1] != 0)
-	 {
-	   placement_successful = 0;
-	 }
-       
+       //Checks if two rooms are touching by checking the perimeter of room
+       else
+       {
+	 for(int j = x_coord; j <= x_dim; j++)
+	   {
+	     for(int i = y_coord; i <= y_dim; i++)
+	     {
+	       if(dungeon[y+i][x-1] != 0 || dungeon[y-1][x+j] ||
+		  dungeon[(y+y_dim)+1][x+j] != 0 || dungeon[(x+x_dim)+1][y+i] != 0)
+		 {
+		   placement_successful = 0;
+		 }
+	     }
+	   }
+       }
      }
    }
 
