@@ -1,3 +1,4 @@
+2/5/2021 DH: Added a check to avoid two rooms touching
+2/4/2021 DH: Created Makefile and changed formatting.
 2/4/2021 CB: Set up code, made create_rooms method, set_dungeon method, and
 print_dungeon method.
-2/4/2021 DH: Created Makefile and changed formatting.
